tests/negative/test_fnc_def_same_sig_ret_type.orb
fnc foo (x:i32) ();
fnc foo (x:i32) i32 {};

fnc main () () {};